--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/server.ts",
     "test:int": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test prisma db seed && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -- -i --testPathPattern=tests/integrations",
     "build": "tsc",
-    "start": "dist/src/server.js"
+    "start": "node dist/src/server.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
